// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Object metadata creation should fail v2 when labelPlural contains only whitespace 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Object label is too short",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "listinga",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when labelPlural exceeds maximum length 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Object label is too long",
              "value": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "listinga",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when labelPlural is empty 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Object label is too short",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "listinga",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when labelSingular contains only whitespace 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Object label is too short",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "listinga",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when labelSingular exceeds maximum length 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Object label is too long",
              "value": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "listinga",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when labelSingular is empty 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Object label is too short",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "listinga",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when labels are identical 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "The singular and plural labels cannot be the same for an object",
              "userFriendlyMessage": "The singular and plural labels cannot be the same for an object",
              "value": "FooBar",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "listinga",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when labels with whitespaces result to be identical 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "The singular and plural labels cannot be the same for an object",
              "userFriendlyMessage": "The singular and plural labels cannot be the same for an object",
              "value": "FooBar",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "listinga",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when name exceeds maximum length 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name is too long",
              "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
          },
          "type": "create_object",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too long",
              "userFriendlyMessage": "Name is too long",
              "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too long",
              "userFriendlyMessage": "Name is too long",
              "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too long",
              "userFriendlyMessage": "Name is too long",
              "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too long",
              "userFriendlyMessage": "Name is too long",
              "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too long",
              "userFriendlyMessage": "Name is too long",
              "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when namePlural has invalid characters 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "μ",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "μ",
            "nameSingular": "listinga",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when namePlural is a reserved keyword 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "The name is not available",
              "value": "users",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "users",
            "nameSingular": "listinga",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when namePlural is an empty string 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "",
            "nameSingular": "listinga",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when namePlural is not camelCased 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name should be in camelCase",
              "value": "Not_Camel_Case",
            },
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "Not_Camel_Case",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "Not_Camel_Case",
            "nameSingular": "listinga",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when nameSingular contains only one char and whitespaces 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name should be in camelCase",
              "value": "a a",
            },
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "a a",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "a a",
          },
          "type": "create_object",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name should be in camelCase",
              "userFriendlyMessage": "Name should be in camelCase",
              "value": "a a",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "a a",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "a a",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name should be in camelCase",
              "userFriendlyMessage": "Name should be in camelCase",
              "value": "a a",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "a a",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "a a",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name should be in camelCase",
              "userFriendlyMessage": "Name should be in camelCase",
              "value": "a a",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "a a",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "a a",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name should be in camelCase",
              "userFriendlyMessage": "Name should be in camelCase",
              "value": "a a",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "a a",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "a a",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name should be in camelCase",
              "userFriendlyMessage": "Name should be in camelCase",
              "value": "a a",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "a a",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "a a",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when nameSingular contains only whitespaces 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "",
          },
          "type": "create_object",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too short",
              "userFriendlyMessage": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too short",
              "userFriendlyMessage": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too short",
              "userFriendlyMessage": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too short",
              "userFriendlyMessage": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too short",
              "userFriendlyMessage": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when nameSingular has invalid characters 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "μ",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "μ",
          },
          "type": "create_object",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "μ",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "μ",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "μ",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "μ",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "μ",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "μ",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "μ",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "μ",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "μ",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "μ",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when nameSingular is a reserved keyword 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "The name is not available",
              "value": "user",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "user",
          },
          "type": "create_object",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "The name is not available",
              "userFriendlyMessage": "The name is not available",
              "value": "user",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "user",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "The name is not available",
              "userFriendlyMessage": "The name is not available",
              "value": "user",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "user",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "The name is not available",
              "userFriendlyMessage": "The name is not available",
              "value": "user",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "user",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "The name is not available",
              "userFriendlyMessage": "The name is not available",
              "value": "user",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "user",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "The name is not available",
              "userFriendlyMessage": "The name is not available",
              "value": "user",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "user",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when nameSingular is an empty string 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "",
          },
          "type": "create_object",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too short",
              "userFriendlyMessage": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too short",
              "userFriendlyMessage": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too short",
              "userFriendlyMessage": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too short",
              "userFriendlyMessage": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too short",
              "userFriendlyMessage": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when nameSingular is not camelCased 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name should be in camelCase",
              "value": "Not_Camel_Case",
            },
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "Not_Camel_Case",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "listingas",
            "nameSingular": "Not_Camel_Case",
          },
          "type": "create_object",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name should be in camelCase",
              "userFriendlyMessage": "Name should be in camelCase",
              "value": "Not_Camel_Case",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "Not_Camel_Case",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "Not_Camel_Case",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name should be in camelCase",
              "userFriendlyMessage": "Name should be in camelCase",
              "value": "Not_Camel_Case",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "Not_Camel_Case",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "Not_Camel_Case",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name should be in camelCase",
              "userFriendlyMessage": "Name should be in camelCase",
              "value": "Not_Camel_Case",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "Not_Camel_Case",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "Not_Camel_Case",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name should be in camelCase",
              "userFriendlyMessage": "Name should be in camelCase",
              "value": "Not_Camel_Case",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "Not_Camel_Case",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "Not_Camel_Case",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name should be in camelCase",
              "userFriendlyMessage": "Name should be in camelCase",
              "value": "Not_Camel_Case",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "Not_Camel_Case",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "name": "Not_Camel_Case",
            "objectMetadataId": Any<String>,
          },
          "type": "create_field",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when names are identical 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "The singular and plural names cannot be the same for an object",
              "userFriendlyMessage": "The singular and plural names cannot be the same for an object",
              "value": "fooBar",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "fooBar",
            "nameSingular": "fooBar",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;

exports[`Object metadata creation should fail v2 when names with whitespaces result to be identical 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "index": [],
      "objectMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_OBJECT_INPUT",
              "message": "The singular and plural names cannot be the same for an object",
              "userFriendlyMessage": "The singular and plural names cannot be the same for an object",
              "value": "fooBar",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "namePlural": "fooBar",
            "nameSingular": "fooBar",
          },
          "type": "create_object",
        },
      ],
      "view": [],
      "viewField": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating object",
  "name": "GraphQLError",
}
`;
